syntax = "proto3";

package knoway.filters.v1alpha1;

option go_package = "knoway.dev/api/filters/v1alpha1";

message APIKeyAuthConfig {
    message AuthServer {
        string url = 1;
    }
    AuthServer auth_server = 3;
}

message UsageStatsConfig {
    message StatsServer {
        string url    = 1;
        int64 timeout = 2;
    }
    StatsServer stats_server = 3;
}

message OpenAIRequestHandlerConfig {}
message OpenAIResponseHandlerConfig {}
